1.20-7.1.4:
- TqLxQuanZ speed up world generation speed if the chunk is not a city

1.20-7.1.3:
- TqLxQuanZ fixed the scattered building can generate on air when there's a terrain correction in the current chunk
- TqLxQuanZ fixed the scattered building can generate on air when there's a terrain correction in the current chunk.

1.20-7.1.2:
- TqLxQuanZ fixed the bug that some POI's lingered after explosions (like brewing stands)
- TqLxQuanZ added park elevation and park border options

1.20-7.1.1:
- Very big optimizations to Lost City generation. On average generation of a city chunk will be 2 times faster.
- New 'stats' command to show average chunk generation time
- Finally fixed the POI warning that was spamming the log during chunk generation

1.20-7.1.0:
- New 'allowvoid' keyword for scattered references. This allows you to specify that a building can be placed in void chunks. By default this is false
- Reintroduced and tweaked the 'floating', 'caves', and 'space' profiles. These are meant to be used in combination with Lost Worlds mod
- No longer spawn player in solid blocks for the lost city dimension and in combination with Lost Worlds
- Better spawn location for cavern style worlds
- In floating profile the underside of buildings is generated better
- Tooltips are back in the Lost City configuration screen. Added info about cavern and floating profiles
- Added new profile option ('citySphereClearBelow') to clear below spheres
- Moved the sphere feature to a later decoration step
- Potentially fixed a threading related crash with spheres
- New API to allow another mod to set the default profile for the overworld
- TqLxQuanZ did various optimizations to Lost Cities worldgen and improved multibuilding handling

1.20-7.0.4:
- TqLxQuanZ fixed a problem where a building has an extreme rare chance to not generate

1.20-7.0.3:
- The createbuilding command now supports a (relative) position argument. This allows you to create a building at a specific location
