@@ -1,6 +1,7 @@
 package mcjty.lostcities.worldgen;
 
-import mcjty.lostcities.LostCities;
+import mcjty.lostcities.setup.Config;
+import mcjty.lostcities.varia.TodoQueue;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.registries.BuiltInRegistries;
 import net.minecraft.core.registries.Registries;
@@ -22,22 +23,19 @@ import net.minecraftforge.server.ServerLifecycleHooks;
 import org.apache.commons.lang3.tuple.Pair;
 
 import javax.annotation.Nonnull;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.Map;
 import java.util.function.Consumer;
 
 public class GlobalTodo extends SavedData {
 
     public static final String NAME = "LostCityTodo";
     // Todo is not persisted. It's currently only for saplings
-    private Map<BlockPos, Consumer<ServerLevel>> todo = new HashMap<>();
+    private TodoQueue<Consumer<ServerLevel>> todo = new TodoQueue<>();
     // This is for spawners and is more important (and persisted)
-    private Map<BlockPos, Pair<BlockState, ResourceLocation>> todoSpawners = new HashMap<>();
+    private TodoQueue<Pair<BlockState, ResourceLocation>> todoSpawners = new TodoQueue<>();
     // This is generic block entity data that still has to be placed in the world
-    private Map<BlockPos, Pair<BlockState, CompoundTag>> todoBlockEntities = new HashMap<>();
+    private TodoQueue<Pair<BlockState, CompoundTag>> todoBlockEntities = new TodoQueue<>();
     // Todo blocks that require POI
-    private Map<BlockPos, BlockState> todoPoi = new HashMap<>();
+    private TodoQueue<BlockState> todoPoi = new TodoQueue<>();
 
     @Nonnull
     public static GlobalTodo getData(Level world) {
@@ -109,33 +107,32 @@ public class GlobalTodo extends SavedData {
             pTag.put("state", NbtUtils.writeBlockState(state));
             poi.add(pTag);
         });
+        tag.put("poi", poi);
         return tag;
     }
 
     public void addTodo(BlockPos pos, Consumer<ServerLevel> code) {
-        todo.put(pos, code);
+        todo.add(pos, code);
     }
 
     public void addSpawnerTodo(BlockPos pos, BlockState spawnerState, ResourceLocation randomEntity) {
-        todoSpawners.put(pos, Pair.of(spawnerState, randomEntity));
+        todoSpawners.add(pos, Pair.of(spawnerState, randomEntity));
     }
 
     public void addBlockEntityTodo(BlockPos pos, BlockState state, CompoundTag tag) {
-        todoBlockEntities.put(pos, Pair.of(state, tag));
+        todoBlockEntities.add(pos, Pair.of(state, tag));
     }
 
     public void addPoi(BlockPos pos, BlockState state) {
-        todoPoi.put(pos, state);
+        todoPoi.add(pos, state);
     }
 
     public void executeAndClearTodo(ServerLevel level) {
-        Map<BlockPos, Consumer<ServerLevel>> copy = this.todo;
-        this.todo = new HashMap<>();
-        copy.forEach((pos, code) -> code.accept(level));
+        int todoSize = Config.TODO_QUEUE_SIZE.get();
 
-        var copySpawners = this.todoSpawners;
-        this.todoSpawners = new HashMap<>();
-        copySpawners.forEach((pos, pair) -> {
+        this.todo.forEach(todoSize, (pos, code) -> code.accept(level));
+
+        this.todoSpawners.forEach(todoSize, (pos, pair) -> {
             BlockState spawnerState = pair.getLeft();
             ResourceLocation randomEntity = pair.getRight();
             if (level.getBlockState(pos).getBlock() == spawnerState.getBlock()) {
@@ -145,10 +142,7 @@ public class GlobalTodo extends SavedData {
             }
         });
 
-        var copyBlockEntities = this.todoBlockEntities;
-        this.todoBlockEntities = new HashMap<>();
-        copyBlockEntities.forEach((pos, pair) -> {
-            BlockState state = pair.getLeft();
+        this.todoBlockEntities.forEach(todoSize, (pos, pair) -> {
             CompoundTag tag = pair.getRight();
             BlockEntity be = level.getBlockEntity(pos);
             if (be != null) {
@@ -156,10 +150,8 @@ public class GlobalTodo extends SavedData {
             }
         });
 
-        var copyPoi = this.todoPoi;
-        this.todoPoi = new HashMap<>();
-        copyPoi.forEach((pos, state) -> {
-            if (!level.getPoiManager().getType(pos).isPresent()) {
+        this.todoPoi.forEach(todoSize, (pos, state) -> {
+            if (level.getPoiManager().getType(pos).isEmpty()) {
                 if (level.getBlockState(pos).getBlock() == state.getBlock()) {
                     level.setBlock(pos, state, Block.UPDATE_ALL);
                 }
